Modify the Log management jump issues

--- a/src/pages/Account/Center/Info.less
+++ b/src/pages/Account/Center/Info.less
@@ -2,11 +2,10 @@
 
 .main {
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 112px);
   background-color: @body-background;
   display: flex;
   padding-top: 16px;
-  padding-bottom: 16px;
   overflow: auto;
   .leftmenu {
     width: 224px;
